# VMEM

./: .env.example  .gitignore  FalkorDB.py  README.md  benchmark_graph_insert.py  benchmark_graph_query.py  config.yaml  pyproject.toml  quickstart.md  requirements.txt  setup.cfg  simple_demo.py  simple_demo_falkordb.py
docs/: design.md
examples/: README.md  cli_ingest.py  cli_query.py  demo.txt  diary1.txt  diary9-10.txt  emo_qwen.py  emo_test.py  full_flow_demo.py  ingest.json  query.json  test.json
scripts/: benchmark_retrieval.py  bootstrap_neo4j.cypher  seed_demo.py  vector_index.cypher
tests/: test_cache.py  test_utils.py
vmem/: __init__.py  cache.py  cli.py  config.py  settings.py  utils.py
vmem/embeddings/: __init__.py  local_embedder.py  openai_embedder.py
vmem/graph/: __init__.py  falkordb_store.py  neo4j_store.py
vmem/llm/: __init__.py  client.py  prompts.py
vmem/memory/: __init__.py  models.py  pipeline.py
vmem/retrieval/: __init__.py  retriever.py
vmem/server/: __init__.py  app.py
